# glas

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  README_ja.md  build.rs  index.xml  justfile  sitemap.xml
.github/assets/: spec.md
.github/scripts/: build_docker.sh  update_version.sh
.github/templates/: README.md  README_ja.md
.github/workflows/: build.yaml  publish.yaml  update_version.yaml
categories/: index.html  index.xml
docs/: hugo.toml  index.html  index.xml
docs/content/docs/: _index.md  spec.md  usage.md
docs/layouts/: index.html
docs/layouts/_default/: baseof.html  list.html  single.html
docs/spec/: index.html
docs/usage/: index.html
src/: fs.rs  gencomp.rs  info.rs  lib.rs  main.rs  options.rs  output.rs  theme.rs
src/fs/: dir.rs  file.rs  git.rs
src/info/: perms.rs  size.rs  time.rs  user.rs
src/options/: cli.rs  config.rs  layout.rs
src/output/: custom.rs  grid.rs  render.rs  table.rs
src/theme/: color.rs
tests/: cli.rs  color_tests.rs  fs_tests.rs  git_tests.rs
tests/cmd/: help.toml  long_cli_help_flag_is_rejected.toml
