[package]
name = "glas"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
git2 = { version = "0.20.4", optional = true }
owo-colors = "4.3.0"
rustc-hash = "2.1.2"
time = { version = "0.3.47", features = [
    "formatting",
    "local-offset",
    "macros",
] }
terminal_size = "0.4.2"
dunce = "1.0.5"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
xattr = "1.6.1"

[dev-dependencies]
assert_cmd = "2.2.1"
tempfile = "3.27.0"
trycmd = "1.0"

[build-dependencies]
time = { version = "0.3.47", features = [
    "formatting",
    "local-offset",
    "macros",
] }

[features]
default = ["git"]
git = ["dep:git2"]
